--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>org.fcrepo</groupId>
   <artifactId>fcrepo-build-tools</artifactId>
-  <version>4.0.1-SNAPSHOT</version>
+  <version>4.1.0</version>
   <packaging>bundle</packaging>
   <name>fcrepo-build-tools</name>
   <description>A package that contains build tools such as checkstyle rules for org.fcrepo projects</description>
@@ -106,7 +106,7 @@
     <developerConnection>scm:git:git@github.com:fcrepo4/fcrepo-build-tools.git
     </developerConnection>
     <url>https://github.com/fcrepo4/fcrepo-build-tools</url>
-    <tag>HEAD</tag>
+    <tag>fcrepo-build-tools-4.1.0</tag>
   </scm>
 
   <prerequisites>
