commit to test on my travis instance (commented out branch command in .travis.yml)

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: java
 jdk:
   - oraclejdk8
 
-branches:
-  only:
-    - master
+# branches:
+#  only:
+#    - master
 
 script:
   - xmllint --valid --noout src/main/resources/fcrepo-checkstyle/checkstyle.xml
