modified mvn install to mvn install -B -V

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ branches:
 script:
   - xmllint --valid --noout src/main/resources/fcrepo-checkstyle/checkstyle.xml
   - xmllint --valid --noout src/main/resources/fcrepo-checkstyle/checkstyle-suppressions.xml
-  - mvn install
+  - mvn install -B -V
   - unzip -d target/zipout target/fcrepo-build-tools-*.jar
   - test "0" == $([ -f target/zipout/fcrepo-checkstyle/checkstyle.xml ] && echo "0" || echo "1")
   - test "0" == $([ -f target/zipout/fcrepo-checkstyle/checkstyle-suppressions.xml ] && echo "0" || echo "1")
